# smallpaint-raytracer-rs

./: Cargo.toml  README.md
src/: main.rs  random.rs  scene.rs
