[package]
name = "smallpaint-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
winit = "0.26"
pixels = "0.9"
nalgebra = "0.31"
rand = "0.8"
rayon = "1.5"